# fst-time-nlu

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  app.py  main.py  packages.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.streamlit/: DEPLOYMENT_GUIDE.md  config.toml
src/: __init__.py
src/chinese/: __init__.py  fst_time_extractor.py  global_symbol_table.py  normalizer.py  time_parser.py  word_level_pynini.py  word_level_utils.py  word_tokenizer.py
src/chinese/config/: recurring_config.yaml
src/chinese/data/char/: t2s_numeric_units.tsv  traditional_to_simple.tsv
src/chinese/data/date/: day_prefix.tsv  month_prefix.tsv  special_time.tsv  special_year.tsv  tenday.tsv  year_prefix.tsv
src/chinese/data/default/: whitelist.tsv
src/chinese/parser/: __init__.py  base_parser.py  between_parser.py  context_merger.py  delta_parser.py  holiday_parser.py  lunar_parser.py  merge_utils.py  period_parser.py  range_parser.py  recurring_parser.py  relative_parser.py  time_utils.py  utctime_parser.py  week_parser.py
src/chinese/rules/: __init__.py  and_rule.py  between.py  char.py  decimal.py  delta.py  delta_time_attach.py  holiday.py  lunar.py  period.py  postprocessor.py  preprocessor.py  range.py  recurring.py  relative.py  unit.py  utctime.py  verb_duration.py  week.py  whitelist.py
src/chinese/test/: benchmark.py  groundtruth.jsonl  groundtruth_utc.jsonl  groundtruth_utc_class.json  groundtruth_utc_test.jsonl
src/chinese/utils/: __init__.py  time_word_filter.py
src/core/: __init__.py  chinese_number_converter.py  english_number_converter.py  logger.py  processor.py  token_parser.py  utils.py
src/english/: __init__.py  fst_time_extractor.py  global_symbol_table.py  normalizer.py  time_parser.py  word_level_pynini.py  word_level_utils.py  word_tokenizer.py
src/english/config/: recurring_config.yaml
src/english/data/: all_tsv_tokens.txt  common_words_3000.txt  compound_words.txt  vocabulary_complete.txt  vocabulary_config.json  year_suffix.tsv
src/english/parser/: __init__.py  base_parser.py  between_parser.py  century_parser.py  composite_relative_parser.py  context_merger.py  delta_parser.py  holiday_parser.py  period_parser.py  quarter_parser.py  range_parser.py  recurring_parser.py  relative_parser.py  time_delta_parser.py  time_range_parser.py  time_utils.py  utctime_parser.py  week_parser.py
src/english/rules/: __init__.py  between.py  century.py  char.py  composite_relative.py  date_interval.py  delta.py  fraction.py  holiday.py  period.py  quarter.py  range.py  recurring.py  relative.py  time_delta.py  time_interval.py  time_range.py  token.py  utctime.py  week.py  whitelist.py
src/english/test/: groundtruth_utc.jsonl  groundtruth_utc_700english.jsonl  groundtruth_utc_with_translation.jsonl  test_english_fst.py  test_english_time.py
(+189 files in other folders)
